feat: run locally with Dockerized Postgres (postgres profile)
Signed-off-by: Akhil Kumar Puri <akhilkumar312001@gmail.com>

--- a/pom.xml
+++ b/pom.xml
@@ -85,6 +85,7 @@
     <dependency>
       <groupId>org.postgresql</groupId>
       <artifactId>postgresql</artifactId>
+      <version>42.7.4</version>
       <scope>runtime</scope>
     </dependency>
 
